--- a/node-register-zookeeper/pom.xml
+++ b/node-register-zookeeper/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>hashring</artifactId>
+    <artifactId>node-register-zookeeper</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
