--- a/core/base/pom.xml
+++ b/core/base/pom.xml
@@ -5,17 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.arnold.msg</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>core</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>core</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>base</module>
-        <module>inmemory-provider</module>
-        <module>zookeeper-store-provider</module>
-    </modules>
+    <artifactId>base</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -23,4 +17,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
