--- a/core/zookeeper-store-provider/pom.xml
+++ b/core/zookeeper-store-provider/pom.xml
@@ -5,17 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.arnold.msg</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>core</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>core</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>base</module>
-        <module>inmemory-provider</module>
-        <module>zookeeper-store-provider</module>
-    </modules>
+    <artifactId>zookeeper-store-provider</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
