--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <packaging>pom</packaging>
     <modules>
         <module>node-registry</module>
-        <module>data-service</module>
         <module>meta-service</module>
         <module>proto</module>
         <module>core</module>
+        <module>server</module>
     </modules>
 
     <properties>
@@ -31,17 +31,17 @@
         <dependencies>
             <dependency>
                 <groupId>com.arnold.msg</groupId>
-                <artifactId>metadata-base</artifactId>
+                <artifactId>base</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.arnold.msg</groupId>
-                <artifactId>metadata-kafka-operator</artifactId>
+                <artifactId>inmemory-provider</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.arnold.msg</groupId>
-                <artifactId>metadata-zookeeper-store</artifactId>
+                <artifactId>zookeeper-store-provider</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -62,11 +62,6 @@
             <dependency>
                 <groupId>com.arnold.msg</groupId>
                 <artifactId>meta-service</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.arnold.msg</groupId>
-                <artifactId>data-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
