--- a/server/pom.xml
+++ b/server/pom.xml
@@ -9,13 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>core</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>base</module>
-        <module>inmemory-provider</module>
-        <module>zookeeper-store-provider</module>
-    </modules>
+    <artifactId>server</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -23,4 +17,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.arnold.msg</groupId>
+            <artifactId>meta-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.arnold.msg</groupId>
+            <artifactId>inmemory-provider</artifactId>
+        </dependency>
+    </dependencies>
 </project>
