--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,7 +14,7 @@
     <modules>
         <module>base</module>
         <module>inmemory-provider</module>
-        <module>zookeeper-store-provider</module>
+        <module>zookeeper-provider</module>
     </modules>
 
     <properties>
