add basic create\delete cluster and queue GRPC API for meta-service

--- a/meta-service/pom.xml
+++ b/meta-service/pom.xml
@@ -20,8 +20,12 @@
     <dependencies>
         <dependency>
             <groupId>com.arnold.msg</groupId>
-            <artifactId>message-queue-proto</artifactId>
+            <artifactId>proto</artifactId>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.arnold.msg</groupId>
+            <artifactId>base</artifactId>
         </dependency>
         <dependency>
             <groupId>com.arnold.msg</groupId>
