--- a/server/pom.xml
+++ b/server/pom.xml
@@ -30,5 +30,15 @@
             <groupId>com.arnold.msg</groupId>
             <artifactId>zookeeper-provider</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-netty-shaded</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
