--- a/core/base/pom.xml
+++ b/core/base/pom.xml
@@ -22,5 +22,17 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.arnold.msg</groupId>
+            <artifactId>proto</artifactId>
+        </dependency>
     </dependencies>
 </project>
