--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
             </dependency>
             <dependency>
                 <groupId>com.arnold.msg</groupId>
-                <artifactId>message-queue-proto</artifactId>
+                <artifactId>proto</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
