--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -5,7 +5,7 @@
         <artifactId>parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>message-queue-proto</artifactId>
+    <artifactId>proto</artifactId>
 
     <build>
         <extensions>
