the initial function of producer

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
     <packaging>pom</packaging>
     <modules>
         <module>node-registry</module>
-        <module>meta-service</module>
         <module>proto</module>
         <module>core</module>
         <module>server</module>
@@ -25,6 +24,7 @@
         <grpc.version>1.77.0</grpc.version>
         <protobuf.version>3.25.1</protobuf.version>
         <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
+        <kafka.version>4.0.1</kafka.version>
     </properties>
 
     <dependencyManagement>
@@ -46,6 +46,11 @@
             </dependency>
             <dependency>
                 <groupId>com.arnold.msg</groupId>
+                <artifactId>kafka-provider</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.arnold.msg</groupId>
                 <artifactId>node-registry-base</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -62,6 +67,11 @@
             <dependency>
                 <groupId>com.arnold.msg</groupId>
                 <artifactId>meta-service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.arnold.msg</groupId>
+                <artifactId>data-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -108,9 +118,15 @@
             </dependency>
 
             <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>${kafka.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter</artifactId>
-                <version>RELEASE</version>
+                <version>6.1.0-M1</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
