--- a/server/data-service/pom.xml
+++ b/server/data-service/pom.xml
@@ -5,18 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.arnold.msg</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>server</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <packaging>pom</packaging>
-    <artifactId>server</artifactId>
-
-    <modules>
-        <module>bootstrap</module>
-        <module>data-service</module>
-        <module>meta-service</module>
-    </modules>
+    <artifactId>data-service</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -24,4 +17,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.arnold.msg</groupId>
+            <artifactId>base</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.arnold.msg</groupId>
+            <artifactId>proto</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.arnold.msg</groupId>
+            <artifactId>kafka-provider</artifactId>
+        </dependency>
+    </dependencies>
 </project>
