--- a/server/meta-service/pom.xml
+++ b/server/meta-service/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.arnold.msg</groupId>
-        <artifactId>core</artifactId>
+        <artifactId>server</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>kafka-provider</artifactId>
+    <artifactId>meta-service</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -20,12 +20,21 @@
     <dependencies>
         <dependency>
             <groupId>com.arnold.msg</groupId>
+            <artifactId>proto</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.arnold.msg</groupId>
             <artifactId>base</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
+            <groupId>com.arnold.msg</groupId>
+            <artifactId>node-registry-base</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
-
 </project>
